[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labdb"
version = "1.0.1"
description = "MongoDB experiment management tool"
authors = [
    {name = "Rohan Menon", email = "rohanme@mit.edu"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.7"
dependencies = [
    "jsonschema~=4.23.0",
    "prompt_toolkit~=3.0.50",
    "Pygments~=2.19.1",
    "pymongo~=4.11.3",
    "PyYAML~=6.0.2",
    "numpy>=1.26.1",
    "argcomplete>=3.2.3",
    "pyreadline3>=3.4.1; sys_platform == 'win32'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
labdb = "labdb.cli:main"

[project.urls]
"Homepage" = "https://github.com/rmenon1008/labdb"
"Issues" = "https://github.com/rmenon1008/labdb/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["labdb"]
